fix wrong color selection

--- a/src/components/ThemeSwitcher/ThemeSwitcher.module.scss
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.module.scss
@@ -1,10 +1,6 @@
 @use '../../styles/abstracts/fonts';
 @use '../../styles/abstracts/funcs';
 
-$red: #ff4651;
-$green: #48ea8b;
-
-
 .themeSwitcher {
   display: flex;
   align-items: center;
@@ -35,8 +31,8 @@ $green: #48ea8b;
   display: block;
   position: relative;
   border-radius: 40px;
-  background: $red;
-  box-shadow: 0 8px 16px -1px rgba($red, .2);
+  background: var(--deco);
+  box-shadow: 0 8px 16px -1px rgba(var(--deco), .2);
   transition: all .3s ease;
 
   &:before,
@@ -76,8 +72,8 @@ $green: #48ea8b;
   display: none;
   &:checked {
     & + .span {
-      background: $green;
-      box-shadow: 0 8px 16px -1px rgba($green, .2);
+      background: var(--deco);
+      box-shadow: 0 8px 16px -1px rgba(var(--deco), .2);
       &:before {
         width: 0px;
         border-radius: 3px;
